src/snapshots/zeek_language_server__complete__test__snippet-10.snap
---
source: src/complete.rs
expression: result
---
Some(
    [
        CompletionItem {
            label: "@ifdef",
            label_details: None,
            kind: Some(
                Snippet,
            ),
            detail: None,
            documentation: None,
            deprecated: None,
            preselect: None,
            sort_text: None,
            filter_text: None,
            insert_text: Some(
                "@ifdef ( ${1:cond} )\n\t${0:#code}\n@endif",
            ),
            insert_text_format: Some(
                Snippet,
            ),
            insert_text_mode: None,
            text_edit: None,
            additional_text_edits: None,
            command: None,
            commit_characters: None,
            data: None,
            tags: None,
        },
    ],
)
