src/snapshots/zeek_language_server__complete__test__snippet-3.snap
---
source: src/complete.rs
expression: result
---
Some(
    [
        CompletionItem {
            label: "for",
            label_details: None,
            kind: Some(
                Snippet,
            ),
            detail: None,
            documentation: None,
            deprecated: None,
            preselect: None,
            sort_text: None,
            filter_text: None,
            insert_text: Some(
                "for ( ${1:x} in ${2:xs} )\n\t{\n\t${3:#code}\n\t}",
            ),
            insert_text_format: Some(
                Snippet,
            ),
            insert_text_mode: None,
            text_edit: None,
            additional_text_edits: None,
            command: None,
            commit_characters: None,
            data: None,
            tags: None,
        },
    ],
)
