src/snapshots/zeek_language_server__complete__test__snippet-6.snap
---
source: src/complete.rs
expression: result
---
Some(
    [
        CompletionItem {
            label: "function",
            label_details: None,
            kind: Some(
                Snippet,
            ),
            detail: None,
            documentation: None,
            deprecated: None,
            preselect: None,
            sort_text: None,
            filter_text: None,
            insert_text: Some(
                "function ${1:function_name}(${2:${3:arg_name}: ${4:arg_type}}): ${5:return_type}\n\t{\n\t${6:#code}\n\t}",
            ),
            insert_text_format: Some(
                Snippet,
            ),
            insert_text_mode: None,
            text_edit: None,
            additional_text_edits: None,
            command: None,
            commit_characters: None,
            data: None,
            tags: None,
        },
    ],
)
